php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #38303 spl_autoload_register() supress all errors silently
Submitted: 2006-08-03 02:34 UTC Modified: 2006-08-03 15:03 UTC
From: marcos dot neves at gmail dot com Assigned: iliaa (profile)
Status: Closed Package: SPL related
PHP Version: 5CVS-2006-08-03 (snap) OS: WINXP
Private report: No CVE-ID: None
 [2006-08-03 02:34 UTC] marcos dot neves at gmail dot com
Description:
------------
If an error happens inside the loaded class, it dies silently with no display. That is horrible to debugging.

Reproduce code:
---------------
<?

echo foo

class Abc {}

?>

<?
// autoload.php
spl_autoload_register();
//require_once "abc.php"; // uncomment to show error
new Abc();
?>

Expected result:
----------------
Parse error: parse error, unexpected T_CLASS, expecting ',' or ';' in abc.php on line 5

Actual result:
--------------
nothing is displayed

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-08-03 15:03 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC