Fixed bug #38303 (spl_autoload_register() supress all errors silently).